added @media inquires to the css to make page responsive to different sized screens

--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Thomas Calhoun's Portfolio</title>
+    <title>Contact Thomas</title>
     <link rel="icon" href="assets/images/logo.png ">
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -21,6 +21,9 @@
             <section id="name">
                 <h1>Thomas Calhoun</h1>
             </section>
+
+            <!-- navigation links -->
+
             
                 <nav id="navlink">
 
@@ -33,42 +36,48 @@
 
     </header>
 
+    <!-- contact inforation section(others to privde their info) -->
     <div class="container">
 
-
-        <!-- still trying to figure out some items( how the bars are on 
-            each picture... spent a ton of time trying to figure this one out.
-            also, are they links to go to toher pages?) -->
-
         <section id="main-section">
-            <h2> Portfolio</h2>
+
+            <h2>Contact
+            </h2>
 
             <hr>
 
-            <!-- placeholder photos for portolio items -->
-            <div class="img-wrap">
-
-
-                <img id="portimg" src="assets/images/placeholder1.jpg" alt="Thomas Calhoun">
-                <img id="portimg" src="assets/images/placeholder2.jpg" alt="Thomas Calhoun">
-                <img id="portimg" src="assets/images/placeholder3.jpg" alt="Thomas Calhoun">
-                <img id="portimg" src="assets/images/placeholder4.jpg" alt="Thomas Calhoun">
-                <img id="portimg" src="assets/images/placeholder5.jpg" alt="Thomas Calhoun">
-
-
+            <div class="contact">
+                <h3>Name</h3>
+                <input type="text" placeholder="Your Name">
             </div>
 
+            <div class="contact">
+                <h3>Email Address</h3>
+                <input type="text" placeholder="name@yourname.com">
+            </div>
+
+            <div class="contact">
+                <h3>Message</h3>
+
+                <textarea name="Message" id="comments" placeholder="What would you like to say?" cols="30" rows="10"></textarea>
+            </div>
+
+            <br>
+            <input id="submit" type="submit" value="Submit">
+
         </section>
+
+
+
     </div>
+
+    <!-- footer of page -->
 
 
 
     <footer>
         Copyright &copy;
     </footer>
-
-
-
 
 
 
